# ChangeLog for app-office/kchart
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-office/kchart/Attic/ChangeLog,v 1.45 2006/09/15 18:41:47 carlo Exp $

*kchart-1.6_beta1 (15 Sep 2006)

  15 Sep 2006; Carsten Lohrke <carlo@gentoo.org> +kchart-1.6_beta1.ebuild:
  Version bump.

  07 Sep 2006; Gustavo Zacarias <gustavoz@gentoo.org> kchart-1.5.1.ebuild:
  Stable on sparc

  03 Sep 2006; Bryan Østergaard <kloeri@gentoo.org> kchart-1.5.2.ebuild:
  Add ~ia64 keyword.

  16 Aug 2006; Markus Rothe <corsair@gentoo.org> kchart-1.5.1.ebuild:
  Stable on ppc64

  23 Jul 2006; Diego Pettenò <flameeyes@gentoo.org> kchart-1.5.2.ebuild:
  Add ~x86-fbsd keyword.

*kchart-1.5.2 (19 Jul 2006)

  19 Jul 2006; Diego Pettenò <flameeyes@gentoo.org> +kchart-1.5.2.ebuild:
  Version bump

  30 Jun 2006; Lars Weiler <pylon@gentoo.org> kchart-1.5.1.ebuild:
  Stable on ppc; gcc-4 related; bug #138099.

  19 Jun 2006; Thomas Cort <tcort@gentoo.org> kchart-1.5.1.ebuild:
  Added ~alpha keyword wrt Bug #122204.

  28 May 2006; Diego Pettenò <flameeyes@gentoo.org>
  -kchart-1.5_beta1.ebuild, -kchart-1.5_beta2.ebuild,
  -kchart-1.5_rc1.ebuild, -kchart-1.5.0.ebuild:
  Remove old versions.

*kchart-1.5.1 (20 May 2006)

  20 May 2006; Carsten Lohrke <carlo@gentoo.org> +kchart-1.5.1.ebuild:
  Version bump.

  13 Apr 2006; Carsten Lohrke <carlo@gentoo.org> kchart-1.5.0.ebuild:
  Missing ~ppc keyword.

*kchart-1.5.0 (12 Apr 2006)

  12 Apr 2006; Carsten Lohrke <carlo@gentoo.org> +kchart-1.5.0.ebuild:
  Version bump.

  08 Apr 2006; <nixnut@gentoo.org> kchart-1.5_rc1.ebuild:
  Added ~ppc. bug #122204

*kchart-1.5_rc1 (29 Mar 2006)

  29 Mar 2006; Carsten Lohrke <carlo@gentoo.org> +kchart-1.5_rc1.ebuild:
  Version bump.

*kchart-1.5_beta2 (11 Mar 2006)

  11 Mar 2006; Carsten Lohrke <carlo@gentoo.org> +kchart-1.5_beta2.ebuild:
  Version bump.

  22 Feb 2006; Aron Griffis <agriffis@gentoo.org> kchart-1.4.2.ebuild:
  Mark 1.4.2 stable on ia64
