@@ -1,0 +1,3 @@
+MD5 2134a0d09a3f98b91a062c7bafb57622 koffice-1.5.92.tar.bz2 54676447
+RMD160 4006772a542c24132ef7b7d16ad087beb6eb76cd koffice-1.5.92.tar.bz2 54676447
+SHA256 a4df08decea688dddfeec7b47e0fb4e96bf75e1c85b72b721d315d718bae11c5 koffice-1.5.92.tar.bz2 54676447
