@@ -1,6 +1,11 @@
 # ChangeLog for app-office/kchart
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-office/kchart/Attic/ChangeLog,v 1.45 2006/09/15 18:41:47 carlo Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-office/kchart/Attic/ChangeLog,v 1.46 2006/09/27 23:40:39 carlo Exp $
+
+*kchart-1.6_rc1 (27 Sep 2006)
+
+  27 Sep 2006; Carsten Lohrke <carlo@gentoo.org> +kchart-1.6_rc1.ebuild:
+  Version bump.
 
 *kchart-1.6_beta1 (15 Sep 2006)
 
